[tool.poetry]
name = "streamlit-demo1"
version = "0.1.0"
description = ""
authors = ["Lioris10 <lior@crosstech.co.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.36.0"
datetime = "^5.5"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
